sudoers file update

--- a/b.html
+++ b/b.html
@@ -1,1 +1,4 @@
 Finally, this file will spin up an html container
+
+### This time the users from the wheel group were allowed to execute sudo command without password.
+### When the jenkins job was executed, it failed because the script requires to run a sudo command, and wheel's users were not allowed to execute sudo commands without a pwd
